welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: Unmatched closing brace '}' ignored here
		setPos(i+k,j-k);ecritMessage(c);c=c+1}
                                                     ^